Fix text-alignment

--- a/app/css/components/slotted-radio.styl
+++ b/app/css/components/slotted-radio.styl
@@ -1,6 +1,7 @@
 .slotted-radio,
 .instrument-strip {
   padding: 12px 16px;
+  text-align: left;
   text-align: start;
 
   .stack {
